# finclust

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: case_study_1-PoW_PoS_tokens.ipynb  case_study_2-Stocks.ipynb  case_study_3-Helixir_data.ipynb  simple_example.ipynb
finclust/: __init__.py  advisor.py  clustering.py  evaluation.py  utils.py  visualization.py
tests/: README.md  test_utils.py
