[metadata]
name = FinClust
version = attr: my_package.VERSION
author = Jakub Ryšavý
description = Library for portfolio creation (by clustering) of financial time series with evaluation and visualizations.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/JakRys/finclust
keywords = clustering, time series, portfolio management
license = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Office/Business :: Financial :: Investment
    Topic :: System :: Clustering

[options]
include_package_data = False
packages = find:
install_requires =
    numpy==1.21.5
    pandas==1.3.5
    QuantStats==0.0.59
    scikit_learn==1.2.0

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
exclude =
    examples*
    tests*